<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EaseViewer</string>
    <string name="app_info">EaseViewer Ver 1.3</string>
    <string name="app_version">Ver 1.3</string>
    <string name="copy_right">Copyright © 2013 TopTeam. All Rights Reserved</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="category_group1">Category</string>
    <string name="category_group2">Function</string>
    <string name="category_group3">More</string>
    <string name="category_office">Office</string>
    <string name="category_picture">Picture</string>
    <string name="category_music">Music</string>
    <string name="category_video">Video</string>
    <string name="category_apk">Apk</string>
    <string name="category_zip">Zip</string>
    <string name="function_pic2pdf">PicToPdf</string>
    <string name="function_theme">Theme</string>
    <string name="more_help">Help</string>
    <string name="more_about">About</string>
    <string name="title_about">About</string>
    <string name="title_choosePic">PicToPdf</string>
    <string name="title_help">Help</string>
    <string name="title_theme">Theme</string>
    <string name="press_again">Press again to exit EaseViewer</string>
    <string name="nofile">Sorry, no file here ...</string>
    <string name="preference_function_intoduce">Introduction</string>
    <string name="preference_advice">Feedback</string>
    <string name="preference_about_team">Github</string>
    <string name="dialog_choose_image">Picture Source</string>
    <string name="dialog_choose_from_camera">Take by Camera</string>
    <string name="dialog_choose_from_media">Select from Media</string>
    <string name="titile_select_useraddr">Select the sender</string>
    <string name="select_useraddr_add_btn">Add the sender</string>
    <string name="title_select_recipient">Select the recipient</string>
    <string name="select_recipient_add_btn">Add the recipient</string>
    <string name="ok_btn">Confirm</string>
    <string name="cancel_btn">Cancel</string>
    <string name="bottom_selectall">Check all</string>
    <string name="bottom_cancelall">Uncheck</string>
    <string name="bottom_delete">Delete</string>
    <string name="bottom_choice">Options</string>
    <string name="choice_copy">Copy</string>
    <string name="choice_move">Move</string>
    <string name="choice_rename">Rename</string>
    <string name="choice_sendbymail">Send by email</string>
    <string name="mail_format_incorrect">Sorry, wrong email address format</string>
    <string name="write_failed">Sorry, database write error</string>
    <string name="not_support">Sorry, can\'t support this kind of email</string>
    <string name="promot_select_recipient">Please select the recipient</string>
    <string name="add_recupient_dialog_title">Please enter the recipient\'s address</string>
    <string name="add_addresser_dialog_title">Please input the sender address</string>
    <string name="passwd_input_dialog_title">Please enter your password</string>
    <string name="net_work_connect_failed">Network connection error</string>
    <string name="passwd_incorrect">Incorrect password</string>
    <string name="promot_enter_passwd">Please enter your password</string>
    <string name="send_subject">Subject:</string>
    <string name="send_body">Mail text:</string>
    <string name="send_attach">Attachment:</string>
    <string name="send_btn">Send</string>
    <string name="name_pdf">File Name:</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="null_fileName">Please enter the file name!</string>
    <string name="null_pic">Please choose a picture or more!</string>
    <string name="dialog_waitting_info">Please waiting....</string>
    <string name="dialog_waitting_move">Moving</string>
    <string name="dialog_waitting_delete">Deleting</string>
    <string name="dialog_waitting_copy">Copying</string>
    <string name="dialog_waitting_check">Checking password</string>
    <string name="dialog_waitting_generate">Generating PDF</string>
    <string name="promot_cannot_senddir">Sorry, can\'t send a directory</string>
    <string name="title_send_mail">Send Email</string>
    <string name="dialog_confirm_exit">Quit edit？</string>
    <string name="dialog_waitting_loading">Opening</string>
    <string name="dialog_confirm_delete">Confirm delete?</string>
    <string name="dialog_confirm_edit">Quit edit？</string>
    <string name="btn_save">Save</string>
    <string name="dialog_confirm_rename">Cancel rename?</string>
    <string name="title_rename">Rename</string>
    <string name="title_ablum">Ablum</string>
    <string name="dialog_confirm_ablum">Quit select?</string>
    <string name="generate_success">File generated at sdcard root!</string>
    <string name="ablum_finish">Finish</string>
    <string name="ablum_only10">Up to 10 photos!</string>
    <string name="screen_shot_success">Capture success</string>
    <string name="advice_waitting">We are building</string>

</resources>