<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/copy"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/choice_copy" >
    </Button>

    <Button
        android:id="@+id/rename"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/choice_rename" >
    </Button>
    
        <Button
        android:id="@+id/move"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/choice_move" >
    </Button>

    <Button
        android:id="@+id/send"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/choice_sendbymail" >
    </Button>

</LinearLayout>