<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:textColor="@android:color/black"
        android:id="@+id/tvsubject"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/send_subject"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/subject" 
        android:maxLines="1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/tvsubject" />

    <TextView
         android:textColor="@android:color/black"
        android:id="@+id/tvboby"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/subject"
        android:text="@string/send_body"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvattach"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@id/tvboby"
        android:text="@string/send_attach" />

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/tvattach" />

    <Button
        android:id="@+id/sendmail"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_flat_btn"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:text="@string/send_btn" />

</RelativeLayout>