<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="10dp"
        android:text="@string/dialog_choose_image"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/Select_fromMedia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_item"
        android:padding="10dp"
        android:text="@string/dialog_choose_from_media"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <View
        android:layout_width="180dp"
        android:layout_height="0.3dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/Select_fromCamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_item"
        android:padding="10dp"
        android:text="@string/dialog_choose_from_camera"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

</LinearLayout>