<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="fill_parent"
            android:background="@color/brown"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/appInfo"
                android:layout_width="240dp"
                android:layout_height="45dp"
                android:background="@color/black_title"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/appLogo"
                    android:layout_marginBottom="2dp"
                    android:layout_toRightOf="@+id/appLogo"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="7pt" />

                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/appLogo"
                    android:layout_alignLeft="@id/appName"
                    android:layout_below="@+id/appName"
                    android:text="@string/app_version"
                    android:textColor="@android:color/white"
                    android:textSize="4pt" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="4dp"
                android:background="@drawable/category_dividing_line" />

            <ScrollView
                android:id="@+id/mlist"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none" >

                <LinearLayout
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/CategoryGroupTextStyle"
                            android:text="@string/category_group1" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/category_dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/categoryOfficeBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_office" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_office" />

                        <TextView
                            android:id="@+id/categoryOfficeCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/categoryPictureBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_picture" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_picture" />

                        <TextView
                            android:id="@+id/categoryPictureCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/categoryMusicBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_music" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_music" />

                        <TextView
                            android:id="@+id/categoryMusicCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/categoryVideoBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_video" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_video" />

                        <TextView
                            android:id="@+id/categoryVideoCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/categoryApkBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_apk" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_apk" />

                        <TextView
                            android:id="@+id/categoryApkCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/categoryZipBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/category_icon_zip" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/category_zip" />

                        <TextView
                            android:id="@+id/categoryZipCount"
                            style="@style/CategoryButtonCountTextStyle" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/CategoryGroupTextStyle"
                            android:text="@string/category_group2" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/category_dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/functionPic2PdfBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/pictopdf" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/function_pic2pdf" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/functionChangeThemeBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/theme" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/function_theme" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/CategoryGroupTextStyle"
                            android:text="@string/category_group3" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:background="@drawable/category_dividing_line" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/moreHelpBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/help" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/more_help" />
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/category_dividing_line_middle" />

                    <LinearLayout
                        android:id="@+id/moreAboutBtn"
                        style="@style/CategoryButtonStyle"
                        android:background="@drawable/button_category" >

                        <ImageView
                            style="@style/CategoryButtonIconStyle"
                            android:src="@drawable/about" />

                        <TextView
                            style="@style/CategoryButtonTextStyle"
                            android:text="@string/more_about" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>