<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_chooser"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/title_choosePic"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/holo_blue_dark"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_btn_choosePic"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:background="@drawable/button_back" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/action_bar_divider"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/title_choosePic"
            android:textColor="@android:color/white"
            android:textSize="9pt" />
    </LinearLayout>

    <View
        android:id="@+id/divider_choosePic"
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_below="@id/title_choosePic"
        android:background="@drawable/category_dividing_line" />

    <GridView
        android:id="@+id/Grid_chooser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_choosePic"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_rounded_rect"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:listSelector="@drawable/bg_rounded_rect"
        android:numColumns="3"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="15dp" />

    <EditText
        android:id="@+id/name_pdf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Grid_chooser"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_rect"
        android:hint="@string/name_pdf"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_generate_pdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/name_pdf"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_flat_btn"
        android:padding="10dp"
        android:text="@string/generate_pdf"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

</RelativeLayout>